[gd_scene load_steps=4 format=3 uid="uid://tu8hq8jwd4f"]

[ext_resource type="Texture2D" uid="uid://mci7bvjle8fq" path="res://Game/Graphics/Background/FullCity/FullCity_shadow.png" id="1_d5ya2"]
[ext_resource type="Script" path="res://Game/Interface/Introduction/scenario.gd" id="2_2phq6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xclkj"]
texture = ExtResource("1_d5ya2")

[node name="Scenario" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xclkj")
script = ExtResource("2_2phq6")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextLabel" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
text = "jlkjlkDLMZSKDZSLKLMSKCMSLKDCMLSQKDSLMKSLMKSM DKZLDK DZLSMKDZLK LMKLZSKLKDZ"
horizontal_alignment = 1
autowrap_mode = 2

[node name="SkipButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 274.0
offset_top = 1084.0
offset_right = 347.0
offset_bottom = 1138.0
text = "SKIP
"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
